--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+	"start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -19,6 +20,7 @@
     "knex": "^0.14.6",
     "moment": "^2.22.1",
     "nodemailer": "^4.6.4",
+    "nodemon": "^1.17.4",
     "pg": "^7.4.1"
   }
 }
