--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.22.1",
     "nodemailer": "^4.6.4",
     "nodemailer-express-handlebars": "^3.0.0",
-    "pg": "^7.4.1"
+    "pg": "^7.4.1",
+    "socket.io": "^2.1.1"
   }
 }
